Chapter 5 Lab (Multiples of 3)

--- a/script.html
+++ b/script.html
@@ -6,17 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-   
+
 </head>
 
 <body>
     <p id="script"></p>
 
     <script>
-            for (var i = 1; i <= 100; i++) {
-                document.getElementById('script').innerHTML += i + "<br>";
+        // for (var i = 0; i <= 100; i++) {
+
+
+        //     document.getElementById('script').innerHTML += i  + "<br>";
+
+        // }
+        for (var i = 0; i <= 100; i++) {
+            if (i % 3 === 0) {
+                document.getElementById("script").innerHTML += "fizz <br>"
+            } else {
+                document.getElementById('script').innerHTML += i + "<br>"
             }
-        </script>
+        }
+    </script>
 
 </body>
 
