--- a/script.html
+++ b/script.html
@@ -14,11 +14,14 @@
 
     <script>
        
-        for (var i = 0; i <= 100; i++) {
-            if (i % 3 === 0) {
-                document.getElementById("script").innerHTML += "fizz <br>"
-            }else if(i % 5 === 0) {
-                 document.getElementById("script").innerHTML+= "Buzz <br>"
+        for (var i = 1; i <= 100; i++) {
+            if (i % 15 === 0) {
+                document.getElementById("script").innerHTML += "FIZZ BUZZ <br>"
+            }
+            else if (i % 3 === 0){
+                document.getElementById("script").innerHTML += "Fizz <br>"
+            }else if (i % 5 === 0){
+                document.getElementById("script").innerHTML += "Buzz <br>"
             }
              else {
                 document.getElementById('script').innerHTML += i + "<br>"
