--- a/script.html
+++ b/script.html
@@ -16,9 +16,9 @@
        
         for (var i = 0; i <= 100; i++) {
             if (i % 3 === 0) {
-                document.getElementById("script").innerHTML += "fizz <br>"
+                document.getElementById("script").innerHTML += "fizz fizz buzz<br>"
             }else if(i % 5 === 0) {
-                 document.getElementById("script").innerHTML+= "Buzz <br>"
+                 document.getElementById("script").innerHTML+= "Buzz fizz buzz <br>"
             }
              else {
                 document.getElementById('script').innerHTML += i + "<br>"
