--- a/script.html
+++ b/script.html
@@ -23,6 +23,9 @@
             }else if (i % 5 === 0){
                 document.getElementById("script").innerHTML += "Buzz <br>"
             }
+            else if (i % 7 === 0){
+                document.getElementById("script").innerHTML += "Fizz <br>"
+            }
              else {
                 document.getElementById('script').innerHTML += i + "<br>"
             }
