--- a/script.html
+++ b/script.html
@@ -24,7 +24,7 @@
                 document.getElementById("script").innerHTML += "Buzz <br>"
             }
             else if (i % 7 === 0){
-                document.getElementById("script").innerHTML += "Fizz <br>"
+                document.getElementById("script").innerHTML += "FUzZ <br>"
             }
              else {
                 document.getElementById('script').innerHTML += i + "<br>"
